Bug 237936 - KolourPaint crashes when zooming past 1000%
Summary: KolourPaint crashes when zooming past 1000%
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kolourpaint-support
URL:
Keywords:
: 179115 243049 246395 248010 248903 254755 266900 270399 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-05-17 16:04 UTC by Jack David Baucum
Modified: 2011-04-08 17:37 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack David Baucum 2010-05-17 16:04:07 UTC
Application: kolourpaint (4.4.2 (KDE 4.4.2))
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-22-generic i686
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
When using ctrl+mousewheel to zoom in, I can zoom in to 1000%, but if I try to zoom past that I get this crash.

The crash can be reproduced every time.

 -- Backtrace:
Application: KolourPaint (kolourpaint), signal: Aborted
[KCrash Handler]
#6  0x00148422 in __kernel_vsyscall ()
#7  0x00c69651 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0x00c6ca82 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0x00be852f in __gnu_cxx::__verbose_terminate_handler() () from /usr/lib/libstdc++.so.6
#10 0x00be6465 in ?? () from /usr/lib/libstdc++.so.6
#11 0x00be64a2 in std::terminate() () from /usr/lib/libstdc++.so.6
#12 0x00be65e1 in __cxa_throw () from /usr/lib/libstdc++.so.6
#13 0x01ed7b15 in qBadAlloc () at global/qglobal.cpp:2004
#14 0x03682b82 in QX11PixmapData::toImage (this=0x84e4bc0) at image/qpixmap_x11.cpp:1494
#15 0x03667c6b in QPixmap::toImage (this=0xbfdf8fc4) at image/qpixmap.cpp:486
#16 0x03735bdc in qt_bitmapToRegion (bitmap=...) at painting/qregion.cpp:3763
#17 0x03735ef7 in QRegion (this=0xbfdf8f1c, bm=...) at painting/qregion.cpp:3913
#18 0x035ccaf9 in QWidget::setMask (this=0x84777d8, bitmap=...) at kernel/qwidget.cpp:12115
#19 0x080997d2 in kpGrip::updatePixmap (this=0x84777d8) at ../../kolourpaint/kpViewScrollableContainer.cpp:216
#20 0x035d0643 in QWidget::event (this=0x84777d8, event=0xbfdf95f0) at kernel/qwidget.cpp:8152
#21 0x039ccfd3 in QFrame::event (this=0x84777d8, e=0xbfdf95f0) at widgets/qframe.cpp:557
#22 0x039d102a in QLabel::event (this=0x84777d8, e=0xbfdf95f0) at widgets/qlabel.cpp:957
#23 0x035724dc in QApplicationPrivate::notify_helper (this=0x8145008, receiver=0x84777d8, e=0xbfdf95f0) at kernel/qapplication.cpp:4300
#24 0x035790f9 in QApplication::notify (this=0xbfdfb10c, receiver=0x84777d8, e=0xbfdf95f0) at kernel/qapplication.cpp:4265
#25 0x00ff4f2a in KApplication::notify (this=0xbfdfb10c, receiver=0x84777d8, event=0xbfdf95f0) at ../../kdeui/kernel/kapplication.cpp:302
#26 0x01fe3a3b in QCoreApplication::notifyInternal (this=0xbfdfb10c, receiver=0x84777d8, event=0xbfdf95f0) at kernel/qcoreapplication.cpp:704
#27 0x03624a81 in QCoreApplication::sendEvent (this=0x8498460, x=-3523, y=11661, w=38400, h=7, isMove=false) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#28 QWidgetPrivate::setGeometry_sys (this=0x8498460, x=-3523, y=11661, w=38400, h=7, isMove=false) at kernel/qwidget_x11.cpp:2597
#29 0x035cfc19 in QWidget::resize (this=0x84777d8, s=...) at kernel/qwidget.cpp:6619
#30 0x035d5a95 in QWidget::resize (this=0x84777d8, minw=6, minh=7) at ../../include/QtGui/../../src/gui/kernel/qwidget.h:996
#31 QWidget::setMinimumSize (this=0x84777d8, minw=6, minh=7) at kernel/qwidget.cpp:3697
#32 0x035d5ca9 in QWidget::setFixedWidth (this=0x84777d8, w=38400) at kernel/qwidget.cpp:3910
#33 0x0809a4a4 in kpViewScrollableContainer::updateGrips (this=0x84ec2f0) at ../../kolourpaint/kpViewScrollableContainer.cpp:1103
#34 0x0809b03b in kpViewScrollableContainer::qt_metacall (this=0x84ec2f0, _c=QMetaObject::InvokeMetaMethod, _id=15, _a=0xbfdf9978) at ./kpViewScrollableContainer.moc:241
#35 0x01fe8c9a in QMetaObject::metacall (object=0x84ec2f0, cl=14319, idx=65, argv=0xbfdf9978) at kernel/qmetaobject.cpp:237
#36 0x01ff73d5 in QMetaObject::activate (sender=0x828acc8, m=0x810f9a0, local_signal_index=1, argv=0xbfdf9978) at kernel/qobject.cpp:3293
#37 0x080db3e5 in kpView::sizeChanged (this=0x828acc8, _t1=...) at ./kpView.moc:109
#38 0x080dc418 in kpView::resizeEvent (this=0x828acc8, e=0xbfdf9f30) at ../../kolourpaint/views/kpView_Events.cpp:286
#39 0x035d0643 in QWidget::event (this=0x828acc8, event=0xbfdf9f30) at kernel/qwidget.cpp:8152
#40 0x035724dc in QApplicationPrivate::notify_helper (this=0x8145008, receiver=0x828acc8, e=0xbfdf9f30) at kernel/qapplication.cpp:4300
#41 0x035790f9 in QApplication::notify (this=0xbfdfb10c, receiver=0x828acc8, e=0xbfdf9f30) at kernel/qapplication.cpp:4265
#42 0x00ff4f2a in KApplication::notify (this=0xbfdfb10c, receiver=0x828acc8, event=0xbfdf9f30) at ../../kdeui/kernel/kapplication.cpp:302
#43 0x01fe3a3b in QCoreApplication::notifyInternal (this=0xbfdfb10c, receiver=0x828acc8, event=0xbfdf9f30) at kernel/qcoreapplication.cpp:704
#44 0x03624a81 in QCoreApplication::sendEvent (this=0x828e3a8, x=-3523, y=-339, w=38400, h=14400, isMove=false) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#45 QWidgetPrivate::setGeometry_sys (this=0x828e3a8, x=-3523, y=-339, w=38400, h=14400, isMove=false) at kernel/qwidget_x11.cpp:2597
#46 0x035cfc19 in QWidget::resize (this=0x828acc8, s=...) at kernel/qwidget.cpp:6619
#47 0x080def82 in QWidget::resize (this=0x828acc8) at /usr/include/qt4/QtGui/qwidget.h:996
#48 kpZoomedView::adjustToEnvironment (this=0x828acc8) at ../../kolourpaint/views/kpZoomedView.cpp:98
#49 0x080defdf in kpZoomedView::setZoomLevel (this=0x828acc8, hzoom=1200, vzoom=1200) at ../../kolourpaint/views/kpZoomedView.cpp:76
#50 0x080bf0d0 in kpMainWindow::zoomTo (this=0x8279848, zoomLevel=1200, centerUnderCursor=true) at ../../kolourpaint/mainWindow/kpMainWindow_View_Zoom.cpp:384
#51 0x080bf366 in kpMainWindow::zoomAccordingToZoomAction (this=0x8279848, centerUnderCursor=false) at ../../kolourpaint/mainWindow/kpMainWindow_View_Zoom.cpp:679
#52 0x080cc9b6 in kpTool::wheelEvent (this=0x8404070, e=0xbfdfa784) at ../../kolourpaint/tools/kpTool_MouseEvents.cpp:331
#53 0x035d0ccb in QWidget::event (this=0x828acc8, event=0xbfdfa784) at kernel/qwidget.cpp:8006
#54 0x035724dc in QApplicationPrivate::notify_helper (this=0x8145008, receiver=0x828acc8, e=0xbfdfa784) at kernel/qapplication.cpp:4300
#55 0x03579714 in QApplication::notify (this=0xbfdfb10c, receiver=0x828acc8, e=0xbfdfa784) at kernel/qapplication.cpp:3920
#56 0x00ff4f2a in KApplication::notify (this=0xbfdfb10c, receiver=0x828acc8, event=0xbfdfa784) at ../../kdeui/kernel/kapplication.cpp:302
#57 0x01fe3a3b in QCoreApplication::notifyInternal (this=0xbfdfb10c, receiver=0x828acc8, event=0xbfdfa784) at kernel/qcoreapplication.cpp:704
#58 0x035f4bc3 in QCoreApplication::sendSpontaneousEvent (this=0x8279848, global_x=2431, global_y=571, delta=120, buttons=..., modifiers=..., orient=Qt::Vertical)
    at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#59 QETWidget::translateWheelEvent (this=0x8279848, global_x=2431, global_y=571, delta=120, buttons=..., modifiers=..., orient=Qt::Vertical) at kernel/qapplication_x11.cpp:4405
#60 0x0360473c in QETWidget::translateMouseEvent (this=0x8279848, event=<value optimized out>) at kernel/qapplication_x11.cpp:4183
#61 0x03603511 in QApplication::x11ProcessEvent (this=0xbfdfb10c, event=0xbfdfad6c) at kernel/qapplication_x11.cpp:3379
#62 0x0363260a in x11EventSourceDispatch (s=0x8148240, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#63 0x03f875e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#64 0x03f8b2d8 in ?? () from /lib/libglib-2.0.so.0
#65 0x03f8b4b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#66 0x0200f5d5 in QEventDispatcherGlib::processEvents (this=0x812e9c0, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#67 0x03632135 in QGuiEventDispatcherGlib::processEvents (this=0x812e9c0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#68 0x01fe2059 in QEventLoop::processEvents (this=0xbfdfb064, flags=) at kernel/qeventloop.cpp:149
#69 0x01fe24aa in QEventLoop::exec (this=0xbfdfb064, flags=...) at kernel/qeventloop.cpp:201
#70 0x01fe669f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#71 0x03572577 in QApplication::exec () at kernel/qapplication.cpp:3579
#72 0x08096d1f in main (argc=1, argv=0xbfdfb2e4) at ../../kolourpaint/kolourpaint.cpp:125

Possible duplicates by query: bug 236894, bug 236578, bug 233701, bug 233296.

Reported using DrKonqi
Comment 1 Christoph Feck 2010-08-02 02:25:09 UTC
*** Bug 246395 has been marked as a duplicate of this bug. ***
Comment 2 Christoph Feck 2010-08-02 02:25:25 UTC
*** Bug 243049 has been marked as a duplicate of this bug. ***
Comment 3 Nicolas L. 2010-08-16 00:31:09 UTC
*** Bug 248010 has been marked as a duplicate of this bug. ***
Comment 4 Christoph Feck 2010-08-29 15:18:15 UTC
*** Bug 248903 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2010-08-29 19:57:28 UTC
SVN commit 1169574 by cfeck:

Fix resizing grip handles causing X11 size overflow

Instead of sizing the handles along the full extent of the view,
we just size them small enough for the handle to be visible. The
mask is now actually redundant, but I do not feel like rewriting
it.

Tested with 1600% zoom on 12000x9000 image, as well as image
smaller than grip size.

CCBUG: 237936


 M  +4 -4      kpViewScrollableContainer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1169574
Comment 6 Christoph Feck 2010-08-29 19:58:49 UTC
SVN commit 1169576 by cfeck:

Fix resizing grip handles causing X11 size overflow (backport r1169574)

BUG: 237936
FIXED-IN: 4.5.2


 M  +4 -4      kpViewScrollableContainer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1169576
Comment 7 Christoph Feck 2010-08-30 01:07:38 UTC
*** Bug 179115 has been marked as a duplicate of this bug. ***
Comment 8 Christoph Feck 2010-10-20 13:05:22 UTC
*** Bug 254755 has been marked as a duplicate of this bug. ***
Comment 9 Christoph Feck 2011-02-22 21:27:46 UTC
*** Bug 266900 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2011-04-08 17:37:15 UTC
*** Bug 270399 has been marked as a duplicate of this bug. ***