Fix resizing grip handles causing X11 size overflow (backport r1169574)

BUG: 237936
FIXED-IN: 4.5.2

svn path=/branches/KDE/4.5/kdegraphics/kolourpaint/; revision=1169576